--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,6 @@
 
 
-serviceAccount: "serviceaccount@developer.gserviceaccount.com"
+serviceAccount: "cicd-sa@storied-core-424404-t8.iam.gserviceaccount.com"
 
 options:
   logging: CLOUD_LOGGING_ONLY
