--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,3 +4,4 @@ serviceAccount: "cicd-sa@storied-core-424404-t8.iam.gserviceaccount.com"
 
 options:
   logging: CLOUD_LOGGING_ONLY
+  logsBucket: gs://logsbuild
