--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,4 +3,4 @@
 serviceAccount: "cicd-sa@storied-core-424404-t8.iam.gserviceaccount.com"
 
 options:
-  logsBucket: gs://logsbuild
+  logsBucket: NONE
